Fixed left-col sometimes stretching too large

--- a/styles/content.less
+++ b/styles/content.less
@@ -20,6 +20,8 @@
   }
   .col-left {
     flex-grow: 2;
+    overflow-wrap: break-word;
+    word-break: break-word;
     @media (max-width: @screen-sm) {
       padding-left: 1rem;
       padding-right: 1rem;
